testsuite/tests/typecheck/should_fail/UnliftedNewtypesMultiFieldGadt.stderr

UnliftedNewtypesMultiFieldGadt.hs:19:11: error:
    • Expected a type with representation ‘IntRep’, but
      ‘Bool’ has representation ‘BoxedRep’
    • In the type ‘Bool’
      In the definition of data constructor ‘FooC’
      In the newtype declaration for ‘Foo’

UnliftedNewtypesMultiFieldGadt.hs:19:19: error:
    • Expected a type with representation ‘IntRep’, but
      ‘Char’ has representation ‘BoxedRep’
    • In the type ‘Char’
      In the definition of data constructor ‘FooC’
      In the newtype declaration for ‘Foo’
